<resources>
    <string name="app_name">Lab2</string>
    <string name="recipesbook">Lab 2. NataRomm</string>
    <string name="Add">Add</string>
    <string name="add_recipe">Add recipe</string>
    <string name="search">Search</string>
    <string name="todo">TODO</string>
    <string name="recipe_1">Push me</string>
    <string name="item">item</string>
    <string name="todo1">TODO</string>
    <string name="search1">Search</string>
</resources>
